# sqlm

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
duckdb/: Cargo.toml
duckdb/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: parameter_reuse.rs
macros/tests/fail/: extra_arg.rs  extra_named.rs  missing_arg.rs  missing_arg.stderr  missing_positional.rs  positional_after_named.rs  positional_after_named.stderr
postgres/: .env  Cargo.toml  Makefile  build.rs  testdb.sql
postgres-macros/: Cargo.toml  build.rs
postgres-macros/src/: enum_derive.rs  from_row.rs  from_row_derive.rs  lib.rs  parser.rs  rename.rs  sql.rs
postgres-macros/tests/: curly_escape.rs  fail.rs  parameter_order.rs  parameter_reuse.rs
postgres-macros/tests/fail/: dollar_sign.rs  dollar_sign.stderr  enum_array_to_enum_literal.stderr  extra_arg.rs  extra_arg.stderr  extra_named.rs  extra_named.stderr  literal_array_to_literal.stderr  missing_arg.rs  missing_arg.stderr  missing_positional.rs  missing_positional.stderr  missing_variable.rs  missing_variable.stderr  no_args.rs  no_args.stderr  positional_after_named.rs  positional_after_named.stderr
postgres-macros/tests/fail-nightly/: date_vs_datetime.rs  date_vs_datetime.stderr  datetime_vs_date.rs  datetime_vs_date.stderr  enum_array_to_enum_literal.rs  enum_array_to_enum_literal.stderr  enum_extra_variant.rs  enum_extra_variant.stderr  enum_missing_variant.rs  enum_missing_variant.stderr  enum_variant_mismatch.rs  enum_variant_mismatch.stderr  literal_array_to_literal.rs  literal_array_to_literal.stderr  scalar_mismatch.rs  scalar_mismatch.stderr
postgres-macros/tests/fail-stable/: date_vs_datetime.rs  date_vs_datetime.stderr  datetime_vs_date.rs  datetime_vs_date.stderr  enum_array_to_enum_literal.rs  enum_array_to_enum_literal.stderr  enum_extra_variant.rs  enum_extra_variant.stderr  enum_missing_variant.stderr  enum_variant_mismatch.rs  enum_variant_mismatch.stderr  literal_array_to_literal.rs  literal_array_to_literal.stderr  scalar_mismatch.rs  scalar_mismatch.stderr
postgres/src/: connection.rs  error.rs  future.rs  internal.rs  lib.rs  macros.rs  pool.rs  query.rs  row.rs  types.rs
postgres/tests/: custom_type_test.rs  datatype_test.rs  enum_test.rs  from_row_test.rs  param_test.rs  primitive_type_test.rs  scalar_test.rs  unit_type_test.rs
sqlite/: Cargo.toml
sqlm/: Cargo.toml  README.md
