[package]
name = "sqlm-duckdb"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "0.8", features = ["uuid", "r2d2"] }
r2d2 = "0.8"
once_cell = "1.17"
sqlm-macros = { path = "../macros", version = "0.1" }
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[features]
default = ["bundled"]
bundled = ["duckdb/bundled"]
