[package]
name = "sqlm-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# sqlm-core = { path = "../core", version = "0.1" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"
sqlm = { package = "sqlm-core", path = "../core" }
