[package]
name = "sqlm-postgres-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = ["comptime"]
comptime = ["postgres", "dotenvy"]

[dependencies]
ariadne = "0.3"
chumsky = "1.0.0-alpha.4"
dotenvy = { version = "0.15", optional = true }
postgres = { version = "0.19", optional = true }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
sqlm-postgres = { path = "../postgres" }

[build-dependencies]
rustversion = "1.0"
