[package]
name = "sqlm-postgres-macros"
version = "0.1.0"
edition = "2021"
authors = ["Markus Ast <m+cargo@rkusa.st>"]
description = "macros for `sqlm-postgres`"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rkusa/sqlm"

[lib]
proc-macro = true

[features]
default = ["json", "uuid"]
json = ["dep:serde_json", "postgres/with-serde_json-1"]
time = ["dep:time", "postgres/with-time-0_3"]
uuid = ["dep:uuid", "postgres/with-uuid-1"]

[dependencies]
ariadne = "0.4"
chumsky = "1.0.0-alpha.6"
dotenvy = "0.15"
heck = "0.5"
pgvector = { version = "0.3", features = ["postgres"], optional = true }
postgres = "0.19"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
rustls = { version = "0.23" }
serde_json = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full", "extra-traits"] }
time = { version = "0.3", optional = true }
tokio-postgres-rustls = "0.12"
uuid = { version = "1.4", optional = true }

[dev-dependencies]
postgres-types = { version = "0.2", features = ["derive"] }
time = "0.3"
trybuild = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
sqlm-postgres = { path = "../postgres" }

[build-dependencies]
rustversion = "1.0"
