[package]
name = "sqlm-postgres"
version = "0.1.0"
edition = "2021"

[features]
default = ["json", "time", "uuid"]
json = ["sqlm-postgres-macros/json", "tokio-postgres/with-serde_json-1", "dep:serde_json"]
time = ["sqlm-postgres-macros/time", "tokio-postgres/with-time-0_3", "dep:time"]
uuid = ["sqlm-postgres-macros/uuid", "tokio-postgres/with-uuid-1", "dep:uuid"]

[dependencies]
deadpool-postgres = "0.10"
dotenvy = "0.15"
http-error = { git = "https://github.com/rkusa/http-error.git", rev = "2ff8d58" } # path = "../../http-error" }
once_cell = "1.17"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde_json = { version = "1.0", optional = true }
sqlm-postgres-macros = { path = "../postgres-macros", default-features = false }
time = { version = "0.3", optional = true }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.10"
uuid = { version = "1.4", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
postgres-types = { version = "0.2", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }

[build-dependencies]
rustversion = "1.0"
