[package]
name = "sqlm-postgres"
version = "0.1.0"
edition = "2021"

[features]
default = ["json", "time", "uuid", "pgvector"]
json = [
    "sqlm-postgres-macros/json",
    "tokio-postgres/with-serde_json-1",
    "dep:serde_json",
]
time = ["sqlm-postgres-macros/time", "tokio-postgres/with-time-0_3", "dep:time"]
uuid = ["sqlm-postgres-macros/uuid", "tokio-postgres/with-uuid-1", "dep:uuid"]
pgvector = ["sqlm-postgres-macros/pgvector", "dep:pgvector"]

[dependencies]
deadpool-postgres = "0.12"
dotenvy = "0.15"
http-error = { version = "0.3.0-alpha.1", features = [
    "tracing",
] } # git = "https://github.com/rkusa/http-error.git", rev = "1f0630c" } # path = "../../http-error" }
once_cell = "1.17"
pgvector = { version = "0.3", features = ["postgres"], optional = true }
rustls = { version = "0.22" }
serde_json = { version = "1.0", optional = true }
sqlm-postgres-macros = { path = "../postgres-macros", default-features = false }
time = { version = "0.3", optional = true }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.11"
tracing = "0.1"
uuid = { version = "1.4", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
postgres-types = { version = "0.2", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }

[build-dependencies]
rustversion = "1.0"
