[package]
name = "sqlm-postgres"
version = "0.1.0"
edition = "2024"
authors = ["Markus Ast <m+cargo@rkusa.st>"]
description = "`sql!` macro to write compile-time checked database queries similar to how `format!` works"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rkusa/sqlm"
readme = "../README.md"

[features]
default = ["json", "time", "uuid", "pgvector", "global_pool"]
global_pool = []
json = [
    "sqlm-postgres-macros/json",
    "tokio-postgres/with-serde_json-1",
    "dep:serde_json",
]
time = ["sqlm-postgres-macros/time", "tokio-postgres/with-time-0_3", "dep:time"]
uuid = ["sqlm-postgres-macros/uuid", "tokio-postgres/with-uuid-1", "dep:uuid"]
pgvector = ["sqlm-postgres-macros/pgvector", "dep:pgvector"]

[dependencies]
deadpool-postgres = "0.14"
dotenvy = "0.15"
http-error = { version = "0.3.0-alpha.5", features = [
    "tracing",
] } #, path = "../../http-error" }
once_cell = "1.17"
pgvector = { version = "0.4", features = ["postgres"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde_json = { version = "1.0", optional = true }
sqlm-postgres-macros = { path = "../postgres-macros", version = "0.1", default-features = false }
time = { version = "0.3", optional = true }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
tracing = "0.1"
uuid = { version = "1.4", optional = true }

[dev-dependencies]
bytes = "1.6"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
postgres-types = { version = "0.2", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }

[build-dependencies]
rustversion = "1.0"
